--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 						</div>
 					</div>
 					<div style='flex: 0.4; padding-left:20px'>
-						<b><i>Tactile Mahjong</i></b><br>Board Game, Chengdu, 7-9/2021 <br>
+						<b><i>Tactile Mahjong</i></b><br>Board Game, Chengdu, 7-9/2021; Collaboration with Yaxin Ye, made in A4 International Artist Residency representing Tactileye. <br>
 						Touch is deeply related to memory and can easily trigger imagination, but people ignore their communication most of the time. In this board game,&nbsp;the players' eyes are blindfolded. By coming up with an imaginative&nbsp;description of the tactile bottles, people use their tactile sensibility to&nbsp;puzzle other players and eventually win the game.<br>
 						<br>
 						The rule is a little similar to the traditional rule of Chinese Mahjong but&nbsp;still has a very different core mechanism. When giving out a bottle, one&nbsp;describes what the bottle feels like or what it reminds one of, and other&nbsp;players decide whether or not to take it depending on the description.<br>
@@ -450,7 +450,7 @@
 			<img src="https://cdn.discordapp.com/attachments/1069655805353271406/1075248745983266866/A5A0167.jpg">
 			<br><br><img src="https://cdn.discordapp.com/attachments/1069655805353271406/1075248743395381329/A5A0112.jpg" alt="display of TV"> display of TV
 		</div>
-		<div style='flex: 0.7;padding-left:50px'>
+		<div style='flex: 0.7;padding-left:60px'>
 			<b><i>Stapoleology</i></b><br>
 			Leilei Xia, Single channel video and
 			Interactive map Installation, wooden
@@ -513,18 +513,17 @@
 			<img src="https://cdn.discordapp.com/attachments/1069655805353271406/1075261327280455720/B97810E0-40BD-4E96-B0C1-DB925868803B_1_105_c.jpeg" alt="all view 2">
 		</div></div><br><br>
 		<div style='display: flex; '>
-			<div style='flex: 0.8;'>
+			<div style='flex: 0.4;'>
 				<img src="https://cdn.discordapp.com/attachments/1069655805353271406/1075262024830955540/Screenshot_2022-12-28_at_3.50.26_PM.png" alt="city walk">
-			</div><div style='flex: 0.2;padding-left:10px'>
-				A city walk tour to introduce people to the “masterpieces” around the street. 
-			</div></div><br><br>
-			<div style='display: flex; '>
-				<div style='flex: 0.3;'>
-					I also summerize the project and wrote an article that is published in "BIEDE", a sub-culture online media platform. It's in Chinese and you can read it <a href="https://mp.weixin.qq.com/s/9HFoJflskF5fvaAEzXG0Yg" style="color:red;">HERE</a>
-				</div><div style='flex: 0.7;padding-left:10px'>
-					<img src="https://cdn.discordapp.com/attachments/1069655805353271406/1075263023838662706/Screenshot_2023-02-14_at_10.51.16_PM.png">
-				</div></div>
-	
+			</div>
+			<div style='flex: 0.4;padding-left:20px'>
+				<img src="https://cdn.discordapp.com/attachments/1069655805353271406/1075262025338462258/image-2.png" alt="me touring people around the poles">
+			</div>
+			<div style='flex: 0.2;padding-left:10px'>
+				A city walk tour to introduce people to the “masterpieces” around the street. <br><br>
+				I also summerize the project and wrote an article that is published in "BIEDE", a sub-culture online media platform. It's in Chinese and you can read it <a href="https://mp.weixin.qq.com/s/9HFoJflskF5fvaAEzXG0Yg" style="color:red;">HERE</a><br><br>
+				<img src="https://cdn.discordapp.com/attachments/1069655805353271406/1075263023838662706/Screenshot_2023-02-14_at_10.51.16_PM.png" alt="Screenshot">
+			</div></div>
 		
 </div>
 
