--- a/index.html
+++ b/index.html
@@ -314,13 +314,13 @@
 		</div><br>
 		<div style="text-align: left;"><b>Review of all the Tactile Jam Workshop I have hosted (Lick on the name to go to specific page, many pages are under construction)</b><br>
 			<span style="background-color: #951f1f; color: #0bffd6;"><br>
-			<i><a href="Period-Touch-Jam-Workshop" rel="history"></a></i></span></div><i>“Tactile Riddle” Workshop</i>, <b>Goehe Instutite China</b>,Beijing, 7/2022, <br>
-			<i>“Mushrooms” </i>Tactile Workshop, Kunming, <b>Book2Hand Bookstore</b>, Kunming, 8/2022<br>
-			<i><span style="background-color: #c15bb6;"><a href="Women-in-Disability-Touch-Jam-Workshops" rel="history">“Love Live” Female with Disabilities Tactile Jam Workshop</a></span>, </i><b>SoengJoengToi</b>, 12/2021,<br>
-			<i>“Touch and Imagine” Online Tactile Workshop</i>, <b>Online</b>, 10/2021-1/2022,<br>
-			“<i>Tactile conversation</i>”, <b>Chengdu A4 International Artist Residency Program Workshop</b>, 30/9/2021<br>
-			<i>“Friendship” Workshop</i>, <b>Art Museum of Guangzhou Academy of Fine Art</b>, “Repetition, Deep Listening” Pan&nbsp;South East Asia Triennial, public art program workshop,&nbsp;17/4/2021,<br>
-			<span style="background-color: #951f1f; color: #0bffd6;"><i><a href="Period-Touch-Jam-Workshop" rel="history">“Period” Tactile Jam</a></i></span>, <b>SoengJoengToi</b>, 25/2/2021,<br>
+			<i><a href="Period-Touch-Jam-Workshop" rel="history"></a></i></span></div><i>“Tactile Riddle” Workshop</i>, <b>Goehe Instutite China</b>,Beijing, 7/2022, (Hosted with Yiran Wang, representing Tactileye)<br>
+			<i>“Mushrooms” </i>Tactile Workshop, Kunming, <b>Book2Hand Bookstore</b>, Kunming, 8/2022 (Hosted with Fei Gao, representing Tactileye)<br>
+			<i><span style="background-color: #c15bb6;"><a href="Women-in-Disability-Touch-Jam-Workshops" rel="history">“Love Live” Female with Disabilities Tactile Jam Workshop</a></span>, </i><b>SoengJoengToi</b>, 12/2021 (Hosted with Zeyu Wang and Taotao, representing Tactileye)<br>
+			<i>“Touch and Imagine” Online Tactile Workshop</i>, <b>Online</b>, 10/2021-1/2022(As one of the hosts) <br>
+			“<i>Tactile conversation</i>”, <b>Chengdu A4 International Artist Residency Program Workshop</b>, 30/9/2021,(prototyped and developed with Yaxin Ye, representing Tactileye)<br>
+			<i>“Friendship” Workshop</i>, <b>Art Museum of Guangzhou Academy of Fine Art</b>, “Repetition, Deep Listening” Pan&nbsp;South East Asia Triennial, public art program workshop,&nbsp;17/4/2021 (Hosted with Ruochun Yang, representing Tactileye)<br>
+			<span style="background-color: #951f1f; color: #0bffd6;"><i><a href="Period-Touch-Jam-Workshop" rel="history">“Period” Tactile Jam</a></i></span>, <b>SoengJoengToi</b>, 25/2/2021.<br>
 			<i></i><br>
 			<br>
 			<i></i><br>
@@ -553,8 +553,8 @@
 
 			In collaboration with Huangbian Station (Guangdong Times Museum),
 			I initiated a 3-week, 7-session workshop that combines 3D blender
-			animation and a traditional Chinese sport called “Push Hands”, similar to Taichi. Inspired by Jacques Ranciere's The Ignorant Schoolmaster, I wasnot focusing on teaching the 3D software techniques, but was trying to build a community that encourages self-learning, communication and sharing, and investigation of the mind-body connection. The process, instead of outcome, is highly emphasized in our practice. In the workshop, we do animation and push hands alternatively, and had a group sharing at the end of each session. Participants also collaborated on animation clips, as if pushing hands both in real life and in software.<br>
-			After the workshop, I collected participants’ animations and their audio responses to the workshop and collaborated with another animator to make a short about the workshop itself. The short is both an independent film, a summary of people’s works, a text for critical reflection, and guidance for other people to carry out a similar workshop.We rebuilt Xiaogang Park where people practice pushing hands, put the participants’ animation assets in the scene, and let them speak to their author about the experience in the workshop.
+			animation and a traditional Chinese sport called “Push Hands”, similar to Taichi. Inspired by Jacques Ranciere's The Ignorant Schoolmaster, I wasnot focusing on teaching the 3D software techniques, but was trying to build a community that encourages self-learning, communication and sharing, and investigation of the mind-body connection. The process, instead of outcome, is highly emphasized in our practice. In the workshop, we do animation and push hands alternatively, and had a group sharing at the end of each session. Participants also collaborated on animation clips, as if pushing hands both in real life and in software.<br><br>
+			After the workshop, I collected participants’ animations and their audio responses to the workshop and collaborated with <a href="https://vimeo.com/haominpeng">Haomin Peng</a> to make a short about the workshop itself. The short is both an independent film, a summary of people’s works, a text for critical reflection, and guidance for other people to carry out a similar workshop.We rebuilt Xiaogang Park where people practice pushing hands, put the participants’ animation assets in the scene, and let them speak to their author about the experience in the workshop.
 			<br>
 			<div class="responsive-container">
 				<iframe src="https://player.vimeo.com/video/722201211?h=b8cdcc1cf2" width="640" height="564" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
