--- a/index.html
+++ b/index.html
@@ -593,7 +593,19 @@
 
 </div>
 
+<!--About me-->
+<div id="about" class="main">
+	<img src="https://cdn.discordapp.com/attachments/1069655618220216412/1077332034596384779/selfie.jpg" style="width:50%">
+	<h1> Leilei Xia<br>
 
+	</h1><br>
+	<a href="http://instagram.com/lilyxia99" target="_blank" class="icon-link">instagram</a>&nbsp;
+	<a href="https://vimeo.com/leilixia" target="_blank" class="icon-link">Vimeo</a>&nbsp;
+	<a href="mailto:leileixiawork@gmail.com" class="icon-link" rel="history">leileixiawork@gmail.com</a>
+	<br>
+	<br>
+	Leilei Xia was born in Guangzhou, China. She is a multimedia artist who works in experimental animations, video art, tactile art, and participatory collective art. As a material structural experimentalist, she is always trying to ride on the boundaries of the frame, and make different genres and materials coexist in a project. Currently her research had been focusing on combining the process and the result of art together to make art not as a noun but as a verb. She holds an BFA from Rhode Island School of Design, and is currently pursuing MFA at Virginia Commonwealth University with full-ride graduate assistantship award. 
+</div>
 
     <!-- JavaScript to Control the Sidebar -->
     <script>
