--- a/index.html
+++ b/index.html
@@ -269,7 +269,8 @@
 		<br><br>
 		<!---You will Shake Hands With Me--->
 		  <div class="responsive-container">
-		  <iframe src="https://youtu.be/x3F-myJYGsI" width="960" height="540" frameborder="0"  allowfullscreen="" ></iframe>
+			<iframe width="960" height="540" src="https://www.youtube.com/embed/x3F-myJYGsI" title="You Will Shake Hands With Mer" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+		  <!--<iframe src="https://youtu.be/x3F-myJYGsI" width="960" height="540" frameborder="0"  allowfullscreen="" ></iframe>-->
 		  </div>
 		 <br>
 		  <b><i>You Will Shake Hands With Me</i></b>
