Add youtube link

--- a/index.html
+++ b/index.html
@@ -596,12 +596,13 @@
 
 <!--About me-->
 <div id="about" class="main">
-	<img src="https://cdn.discordapp.com/attachments/1069655618220216412/1077332034596384779/selfie.jpg" style="width:50%">
+	<img src="https://cdn.discordapp.com/attachments/1069655618220216412/1077332034596384779/selfie.jpg" style="width:30%">
 	<h1> Leilei Xia<br>
 
 	</h1><br>
 	<a href="http://instagram.com/lilyxia99" target="_blank" class="icon-link">instagram</a>&nbsp;
 	<a href="https://vimeo.com/leilixia" target="_blank" class="icon-link">Vimeo</a>&nbsp;
+	<a href="https://www.youtube.com/channel/UCPpPSkzgAAg012XqhTmlNiQ" target="_blank" class="icon-link">YouTube</a>&nbsp;
 	<a href="mailto:leileixiawork@gmail.com" class="icon-link" rel="history">leileixiawork@gmail.com</a>
 	<br>
 	<br>
