update image on Mahjong

--- a/index.html
+++ b/index.html
@@ -154,10 +154,10 @@
 				<div style='display: flex; padding: 20px;'>
 						<div class="gallery">
 							<div class="gallery-item"style="width:50%" >
-								<img src="https://cdn.discordapp.com/attachments/1069687619056832622/1072016732551655486/image.png">
+								<img src="https://cdn.discordapp.com/attachments/1069687619056832622/1072016732551655486/image.png" alt="People made their Mahjongs">
 							</div>
 							<div class="gallery-item" style="width:50%">
-								<img src="https://cdn.discordapp.com/attachments/1069687619056832622/1072016762356383774/Leilei-Xia-_Tactile_Portfolio.png">
+								<img src="https://cdn.discordapp.com/attachments/1069687619056832622/1094286285251821648/WechatIMG171.jpeg" alt="Leilei Hosting Mahjong Game">
 								Tactile Mahjong has traveled to various art festivals and public events
 							</div>
 						</div>
