update stapoleology link

--- a/index.html
+++ b/index.html
@@ -453,10 +453,10 @@
 		</div>
 		<div style='flex: 0.7;padding-left:60px'>
 			<b><i>Stapoleology</i></b><br>
-			Leilei Xia, Single channel video and
+			Single channel video and
 			Interactive map Installation, wooden
 			board covered pillar, and a city walk,
-			VCUarts Depillar Gallery, 2022
+			VCUarts Depillar Gallery, 2022<br>
 			Amazed by the wild yet intricate
 			pattern on the utility poles in Richmond,
 			I created a fake research
@@ -471,7 +471,8 @@
 			researcher explaining the philosophy
 			behind the staples on utility
 			poles.<br><br>
-			<div class="responsive-container"><iframe src="https://player.vimeo.com/video/779996213" width="1920" height="1080" frameborder="0" allow="fullscreen" allowfullscreen="" class=""></iframe></div><br><br>
+			<div class="responsive-container">
+				<iframe width="960" height="540" src="https://www.youtube.com/embed/asmyf2V1eKw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" alt="Stapoleology Video" allowfullscreen></iframe>
 		<img src="https://cdn.discordapp.com/attachments/1069655805353271406/1075251535044419584/WhatsApp_Image_2022-10-31_at_2.30.34_PM_1.jpeg" alt="People looking for stapoles"><br><br>
 		<img src="https://cdn.discordapp.com/attachments/1069655805353271406/1075252931030421554/image.png" alt="Collage of stapoles">
 				image stills from the video.
