fix bug in format

--- a/index.html
+++ b/index.html
@@ -472,7 +472,8 @@
 			behind the staples on utility
 			poles.<br><br>
 			<div class="responsive-container">
-				<iframe width="960" height="540" src="https://www.youtube.com/embed/asmyf2V1eKw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" alt="Stapoleology Video" allowfullscreen></iframe>
+				<iframe width="960" height="540" src="https://www.youtube.com/embed/asmyf2V1eKw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+				</div><br><br>
 		<img src="https://cdn.discordapp.com/attachments/1069655805353271406/1075251535044419584/WhatsApp_Image_2022-10-31_at_2.30.34_PM_1.jpeg" alt="People looking for stapoles"><br><br>
 		<img src="https://cdn.discordapp.com/attachments/1069655805353271406/1075252931030421554/image.png" alt="Collage of stapoles">
 				image stills from the video.
