--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 		</div>
 		
       <a href="#about">About Me</a>
-      <a href="#contact">Contact </a>
+      <!--<a href="#contact">Contact </a>-->
     </div>
 
 	  		
