--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 		<div class="dropdown">
 			<a href="#home" class="dropbtn filter-btn" style=" font-weight: bold;border:none;"data-filter="video" id="video">Animation and Video</a>
 		  <div  class="dropdown-content" >
+			<a href='#The-Palace'>Rotten Girl's Love</a>
 			<a href='#Rotten-Girls-Love-page'>Rotten Girl's Love</a>
 			<a href='#Frame-page'>Frame</a>
 			<a href='#Run-page'>Run</a>
@@ -403,6 +404,20 @@
 		A girl is taken by a magician into the world of shadow, only to find that she is trapped in the realm of hidden rules.
 		
 	</div></div>
+  </div>
+
+<!--The Palace-->
+<div id="The-Palace" class="main">
+	<div class="responsive-container">
+		<iframe width="3840" height="1080" alt="The Palace" src="https://youtu.be/LzCTLmiBhfc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+	</div>
+	<div style='display: flex; '>
+		<div style='flex: 0.2;'>
+			</div>
+		<div style='flex: 0.8;'>
+			<b><i>The Palace</i></b><br>
+			11'24''', two-channel video installation, 2023<br>A king meets a monk and evokes their memories in the unseen palace./div></div>
+
   </div>
 
 <!--Cat-->
