修改重复的名字

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 		<div class="dropdown">
 			<a href="#home" class="dropbtn filter-btn" style=" font-weight: bold;border:none;"data-filter="video" id="video">Animation and Video</a>
 		  <div  class="dropdown-content" >
-			<a href='#The-Palace'>Rotten Girl's Love</a>
+			<a href='#The-Palace'>The Palace</a>
 			<a href='#Rotten-Girls-Love-page'>Rotten Girl's Love</a>
 			<a href='#Frame-page'>Frame</a>
 			<a href='#Run-page'>Run</a>
