--- a/index.html
+++ b/index.html
@@ -419,6 +419,7 @@
 			11'24''', two-channel video installation, 2023<br>A king meets a monk and evokes their memories in the unseen palace./div></div>
 
   </div>
+</div>
 
 <!--Cat-->
 <div id="Cat-page" class="main">
@@ -497,7 +498,6 @@
 		</div>
 	</div>
 
-	
 	<br><br>
 	<img src="https://cdn.discordapp.com/attachments/1069655805353271406/1075248743672193034/A5A0115.jpg" alt="map installed on an ipad"><br><br>
 	<img src="https://cdn.discordapp.com/attachments/1069655805353271406/1075248744389419028/A5A0123.jpg" alt="map navigate view"><br>
