changed palace code

--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
 <!--The Palace-->
 <div id="The-Palace" class="main">
 	<div class="responsive-container">
-		<iframe width="3840" height="1080" alt="The Palace" src="https://youtu.be/LzCTLmiBhfc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+		<iframe width="1920" height="1080" src="https://www.youtube.com/embed/LzCTLmiBhfc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 	</div>
 	<div style='display: flex; '>
 		<div style='flex: 0.2;'>
