--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 				<a href="#tactile-bracelets-page">Tactile Bracelets</a>
 				<a href='#Tactile-Mahjong-page'>Tactile-Mahjong</a>
 				<a href='#Touch-Jam-Workshop-page'>Touch-Jam-Workshop</a>
-				<a href='#Empty-Touch-Workshop-page'>Empty-Touch-Workshop</a>
+				<a href='#Empty-Touch-Workshop-page'>Empty-Touch</a>
 			</div>
 			</div>
 		<div class="dropdown">
@@ -458,6 +458,41 @@
 		</div>
 	</div>
 </div>
+
+<!--Empty-Touch-Workshop-page-->
+<div id="Empty-Touch-Workshop-page" class="main" style ="background-color: black; color:aliceblue; margin-left: 5%;">
+	<div style='display: flex; '>
+		<div style='flex: 0.6;'>
+			<img src="https://media.discordapp.net/attachments/1107698002375745537/1107699871705743390/DSC09986.jpg?width=1524&height=1206">
+			Still from the video instllation
+		</div>
+		<div style='flex: 0.4;'><br>
+			<b><i>Empty Touch</i></b><br>
+			"Empty Touch" is a tactile phenomenon I discovered by chance, which can utilize people's habitual movements and memories to simulate the feeling of touching something without touching anything. Specifically, it is a way to conjure up the body's memory of touching something or being in a certain space through a performance without physical objects, and when the muscle memory is awakened, the person will also feel as if they have actually touched something.<br><br>
+			<b><i>The Palace</i></b><br>
+			Translucent gauze, two-channel video, two-channel sound, 2023<br>
+			The Palace is a video installation that serves as both a story and a tutorial to teach people how to experience the Empty Touch, open their own palaces, and create the invisible. Utilizing the metaphor and embodied philosophy of Empty Touch, the story tells the tale of a monk and an emperor who have both forgotten each other but find a connection in the depths of their memories of their "palaces".<br><br>
+			<img src="https://media.discordapp.net/attachments/1069686543125598278/1107698001754992761/DSC00105.jpg?width=1688&height=1126">
+		</div>
+	</div>
+	<div style="display:flex;">
+		<iframe width="1920" height="1080" src="https://www.youtube.com/embed/LzCTLmiBhfc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+	</div><br>
+	<div style='display: flex; '>
+		<div style='flex: 0.5;'>
+			<img src="https://media.discordapp.net/attachments/1107698002375745537/1107698096940531742/DSC00047.jpg?width=1744&height=1162">
+			<img src="https://media.discordapp.net/attachments/1107698002375745537/1107699873245048913/DSC09992.jpg?width=1744&height=1162">
+			<img src="https://media.discordapp.net/attachments/1107698002375745537/1107699817607614474/DSC00338.jpg?width=1744&height=1162">
+		</div>
+		<div style='flex: 0.5;'>
+			<img src="https://media.discordapp.net/attachments/1107698002375745537/1107698372946706452/DSC00072.jpg?width=1738&height=1264">
+			<img src="https://media.discordapp.net/attachments/1107698002375745537/1107698694314274949/DSC00241.jpg?width=1744&height=1162">
+			<img src="https://media.discordapp.net/attachments/1107698002375745537/1107699836305817652/DSC00344.jpg?width=1744&height=1162">
+		</div>
+	</div>
+	
+</div>
+
 
 <!--Stapoleology-->
 <div id="Stapoleology-page" class="main">
