update title and about me

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+	<title>Leilei Xia</title>
 	<meta charset="UTF-8">
 	  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 	  <link rel="stylesheet" href="style.css" type="text/css">
@@ -664,7 +665,7 @@
 	<a href="mailto:leileixiawork@gmail.com" class="icon-link" rel="history">leileixiawork@gmail.com</a>
 	<br>
 	<br>
-	Leilei Xia was born in Guangzhou, China. She is a multimedia artist who works in experimental animations, video art, tactile art, and participatory collective art. As a material structural experimentalist, she is always trying to ride on the boundaries of the frame, and make different genres and materials coexist in a project. Currently her research had been focusing on combining the process and the result of art together to make art not as a noun but as a verb. She holds an BFA from Rhode Island School of Design, and is currently pursuing MFA at Virginia Commonwealth University with full-ride graduate assistantship award. 
+	Leilei Xia was born in Guangzhou, China. She is a multimedia artist who works in tactile art, experimental animations, video art, and participatory collective art. As one of the editors of independent science zine Icosa Magazine and the founder of tactile art collective Tactileye, Leilei explores how tactility and bodily feelings are manifested in different medium, and is interested in combining the process and the result of art together to make art not as a noun but as a verb.<br><br>Her workshop has been hosted in Institute of Contemporary Art at Virginia Commonwealth University, UCCA Center for Contemporary Art, The Guangzhou Academy of Fine Arts, and her films and animation has been awarded or selected in Ann Arbor Film Festival, Stop Trik Animation Festival, Berlin Female Film Festival, Paris International Animation Festival, and so on. Her works has been shown in exhibited internationally in New York, Geensboro, Richmond, Guangzhou, and other cities. She was also one of the speaker in TEDxVCU 2023. She holds an BFA from Rhode Island School of Design, and is currently pursuing MFA at Virginia Commonwealth University .
 </div>
 
     <!-- JavaScript to Control the Sidebar -->
