updated the empty touch page

--- a/index.html
+++ b/index.html
@@ -470,29 +470,52 @@
 		<div style='flex: 0.6;'>
 			<img src="https://media.discordapp.net/attachments/1107698002375745537/1107699871705743390/DSC09986.jpg?width=1524&height=1206">
 			Still from the video instllation
+			<b><i>The Palace</i></b><br>
+			Translucent gauze, two-channel video, two-channel sound, 2023<br>
+			The Palace is a video installation featuring a narrative tutorial for empty touch— both a story and a tutorial, which literally teaches people how to open up their palace and create invisible object, while also use the metaphor and embodied philosophy of empty touch to tell a story between a monk and an emperor, who they both has forgotten about each other, but found their connections in deep memory in “the Palace”..<br><br>
 		</div>
 		<div style='flex: 0.4;'><br>
 			<b><i>Empty Touch</i></b><br>
 			"Empty Touch" is a tactile phenomenon I discovered by chance, which can utilize people's habitual movements and memories to simulate the feeling of touching something without touching anything. Specifically, it is a way to conjure up the body's memory of touching something or being in a certain space through a performance without physical objects, and when the muscle memory is awakened, the person will also feel as if they have actually touched something.<br><br>
-			<b><i>The Palace</i></b><br>
-			Translucent gauze, two-channel video, two-channel sound, 2023<br>
-			The Palace is a video installation that serves as both a story and a tutorial to teach people how to experience the Empty Touch, open their own palaces, and create the invisible. Utilizing the metaphor and embodied philosophy of Empty Touch, the story tells the tale of a monk and an emperor who have both forgotten each other but find a connection in the depths of their memories of their "palaces".<br><br>
+			
 			<img src="https://media.discordapp.net/attachments/1069686543125598278/1107698001754992761/DSC00105.jpg?width=1688&height=1126">
 		</div>
 	</div>
-	<div style="display:flex;">
+	<div style="display:flex;" alt="video for the Palace">
 		<iframe width="1920" height="1080" src="https://www.youtube.com/embed/LzCTLmiBhfc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 	</div><br>
 	<div style='display: flex; '>
 		<div style='flex: 0.5;'>
-			<img src="https://media.discordapp.net/attachments/1107698002375745537/1107698096940531742/DSC00047.jpg?width=1744&height=1162">
-			<img src="https://media.discordapp.net/attachments/1107698002375745537/1107699873245048913/DSC09992.jpg?width=1744&height=1162">
+			<img src="https://media.discordapp.net/attachments/1107698002375745537/1107698096940531742/DSC00047.jpg?width=1744&height=1162" alt="in front of one projection video of a person, there is big hands projected on the half transparent screen">
+			<img src="https://media.discordapp.net/attachments/1107698002375745537/1107699873245048913/DSC09992.jpg?width=1744&height=1162" alt="in front of one projection video of a hand with silk shadow, there is big hands projected on the half transparent screen">
 			<img src="https://media.discordapp.net/attachments/1107698002375745537/1107699817607614474/DSC00338.jpg?width=1744&height=1162">
 		</div>
 		<div style='flex: 0.5;'>
 			<img src="https://media.discordapp.net/attachments/1107698002375745537/1107698372946706452/DSC00072.jpg?width=1738&height=1264">
 			<img src="https://media.discordapp.net/attachments/1107698002375745537/1107698694314274949/DSC00241.jpg?width=1744&height=1162">
 			<img src="https://media.discordapp.net/attachments/1107698002375745537/1107699836305817652/DSC00344.jpg?width=1744&height=1162">
+		</div>
+	</div>
+	<img src="https://media.discordapp.net/attachments/1107698002375745537/1120633612027572264/IMG_7227.jpg?ex=651bd2e1&is=651a8161&hm=f5a757084ca8599b49f9b5bf53a58e479f601fdcd773ac2419ee7c64002fdc74&=&width=1472&height=1104" alt="behind the scene of the installation">
+	behind the scene of the installation
+	<br><br><br><br>
+	<div style='display: flex; 'alt="Empty Touch Workshop">
+		<div style='flex: 0.5; padding-right:10px' >
+			<b><i>Empty Touch Workshop</i></b> <br>
+			workshop<br>
+			Using the same fictional framework as The Palace,  the workshop provides participants a metaphorical space to practice experiencing touch with gestures. Things in the palace are both empty and entity, which come not out of own embodied memories. The workshop has different variations: To touch objects, to touch the space, or to use this method to experience other artworks, such as poems, films, etc. <br><br>
+			This workshop has been hosted in Beijing UCCA Museum, Shanghai E-Flow and Richmond VCU MFA Candidacy show. 
+			<br><br><br>
+			<img src="https://media.discordapp.net/attachments/1107698002375745537/1128555212118953984/R0000921.jpg?ex=651c4c32&is=651afab2&hm=348db89e3662c7bd590683b906cb32bda766d2884c638346cf7b9d4e70c2ee07&=&width=1668&height=1104" alt="Leilei and participants doing the warm up"><br><br>
+			<img src="https://media.discordapp.net/attachments/1107698002375745537/1128554956090265610/R0001309.jpg?ex=651c4bf5&is=651afa75&hm=331003006117cebd9a15e2681d4c3a85a8f2c62b4c9f363ad4fcfc13d0570378&=&width=1478&height=1104" alt="close up on paricipants' gesture of touching something">
+			
+		</div>
+		<div style='flex: 0.5;'>
+			<img src="https://media.discordapp.net/attachments/1107698002375745537/1128555216485224478/R0000952.jpg?ex=651c4c33&is=651afab3&hm=5084382ca8d8338e6a17f33f0a3508bbf60fb32c623c08c3fafbd81b9289c9cf&=&width=738&height=1104" alt="participants trying to mold the invisible objects">
+			<br><br>
+			<img src="https://media.discordapp.net/attachments/1107698002375745537/1128555179235606578/R0001162.jpg?ex=651c4c2a&is=651afaaa&hm=5c0a89b27bd044f6ebc4f1185f03112c5959de4203e0db34f1ef1b20f39e355a&=&width=1664&height=1104" alt="when collaborating with deaf participants, we tried doing the invisible palace using vision">
+			when collaborating with deaf participants, we tried doing the invisible palace using vision
+			
 		</div>
 	</div>
 	
